# microtorch

./: microtorch.code-workspace  pyproject.toml  requirements.txt  sandbox.ipynb
.github/workflows/: run-pre-commit.yaml  run-tests.yaml
examples/: main.py  pyproject.toml
examples/src/microtorch_examples/mnist/: __init__.py  mnist.py
microtorch/: __init__.py
microtorch/nn/: __init__.py  modules.py
microtorch/nn/modules/: activation.py  linear.py  loss.py  module.py  parameter.py
microtorch/optim/: sgd.py
microtorch/tensor/: __init__.py  backprop.py  func.py  functional.py  tensor.py
mten/: .gitkeep
src/microtorch/: __init__.py
src/microtorch/nn/modules/: activation.py  linear.py  loss.py  module.py  utils.py
src/microtorch/optim/: __init__.py  optimizer.py  sgd.py
src/microtorch/tensor/: backprop.py  functional.py  tensor.py  utils.py
src/microtorch/utils/data/: __init__.py  dataloader.py  dataset.py
src/microtorch/utils/transforms/: __init__.py  base.py
tests/: test_version.py
tests/nn/modules/: test_activation.py  test_get_parameters.py  test_linear.py  test_loss.py  test_module.py  test_modules_utils.py
tests/optim/: test_optimizer.py  test_sgd.py
tests/tensor/: test_backprop.py  test_functional.py  test_tensor.py  test_tensor_utils.py
tests/utils/data/: test_dataloader.py
