[project]
name = "microtorch"
version = "0.1.0"
description = "microtorch is a deep learning framework for educational purposes. It is heavily inspired by PyTorch and closely follows its style. People can benefict from it to have an in-depth understanding of deep learning."
readme = "README.md"
authors = [
    { name = "Rafid", email = "rafidka@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pyright>=1.1.396",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.9",
]

[tool.coverage.run]
branch = true
source = ["microtorch"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]
fail_under = 98
ignore_errors = true
omit = [
    "tests/*",
    "setup.py",
]

[tool.coverage.html]
directory = "coverage_html"

[tool.pyright]
reportMissingImports = false
typeCheckingMode = "strict"
venv = ".venv"
venvPath = "."

[tool.pytest.ini_options]
addopts = """
    --cov=microtorch
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
    --cov-branch
    """
pythonpath = ["./src"]
testpaths = "tests"
xfail_strict = true

[tool.ruff]
line-length = 88
target-version = "py312"
include = [
    "microtorch/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
extend-select = [
    "Q",
    "RUF100",
    "C90",
    "UP",
    "I",
    "D",
]
isort = { combine-as-imports = true, known-first-party = ["microtorch"] }
mccabe = { max-complexity = 15 }
ignore = [
    "D100", # ignore missing docstring in module
    "D102", # ignore missing docstring in public method
    "D104", # ignore missing docstring in public package
    "D105", # ignore missing docstring in magic methods
    "D107", # ignore missing docstring in __init__ methods
    "D200", # ignore one-line docstring should not be in multi-line format
    "D212", # ignore multi-line docstring summary should start at the second line
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"docs/**/*.py" = ["D"]
